language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_float.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst pi = 3.14\n"
---

const pi = 3.14
           ↑▔▔▔


----- Hover content (markdown) -----
```gleam
Float
```
