language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_int.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst ten = 10\n"
---

const ten = 10
            ↑▔


----- Hover content (markdown) -----
```gleam
Int
```
