language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_list.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst numbers = [2, 4, 6, 8]\n"
---

const numbers = [2, 4, 6, 8]
                ↑▔▔▔▔▔▔▔▔▔▔▔


----- Hover content (markdown) -----
```gleam
List(Int)
```
