language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_other_constant.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst constant1 = 10\nconst constant2 = constant1\n"
---

const constant1 = 10
const constant2 = constant1
                  ▔▔▔↑▔▔▔▔▔


----- Hover content (markdown) -----
```gleam
Int
```
