language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_record.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Wibble {\n  Wibble(Int)\n}\n\nconst w = Wibble(10)\n"
---

type Wibble {
  Wibble(Int)
}

const w = Wibble(10)
          ▔↑▔▔▔▔▔▔▔▔


----- Hover content (markdown) -----
```gleam
Wibble
```
