language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_string.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst message = \"Hello!\"\n"
---

const message = "Hello!"
                ▔▔▔▔▔▔↑▔


----- Hover content (markdown) -----
```gleam
String
```
