language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_string_concatenation.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst name = \"Bob\"\nconst message = \"Hello \" <> name\n"
---

const name = "Bob"
const message = "Hello " <> name
                ▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔▔


----- Hover content (markdown) -----
```gleam
String
```
