language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_tuple_element.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst tuple = #(1, 3.5, False)\n"
---

const tuple = #(1, 3.5, False)
                        ↑▔▔▔▔ 


----- Hover content (markdown) -----
```gleam
Bool
```
